--- a/media consultant system .ipynb
+++ b/media consultant system .ipynb
@@ -79,6 +79,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. **Describe the method(s) used to resolve the conflict (e.g., priority, recency, specificity):**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "لحل التعارضات في النظام الذي تم تصميمه، يمكن استخدام بعض الطرق الفعالة التالية:\n",
+    "\n",
+    "#### **الأولوية (Priority):**\n",
+    "الأولوية هي طريقة لحل التعارض حيث يتم تحديد قواعد أو أحداث ذات أهمية أعلى تتطلب اتخاذ إجراءات أسرع أو أكثر أهمية من غيرها. عندما تتعارض قواعد متعددة، يتم إعطاء الأولوية للقاعدة الأكثر أهمية بناءً على معايير محددة مثل المصداقية أو الحداثة أو الأخلاقيات.\n",
+    "\n",
+    "مثال:\n",
+    "- إذا كان المحتوى يحتوي على عناصر غير أخلاقية، يتم إعطاء الأولوية لقاعدة **رفض المحتوى** (قاعدة رفض المحتوى غير الأخلاقي) على قواعد أخرى مثل **مراجعة التفاعل** أو **محتوى مثير للجدل**.\n",
+    "  \n",
+    "#### **التكرار (Recency):**\n",
+    "التكرار أو الحداثة هو طريقة لحل التعارض عند التعامل مع القواعد المتعلقة بالمحتوى الذي تم تحديثه مؤخرًا. عندما يحدث تعارض بين القواعد التي تشير إلى تحديثات أو تغييرات في المحتوى، يتم إعطاء الأولوية للمحتوى الأكثر حداثة، أي الذي تم تحديثه مؤخرًا.\n",
+    "\n",
+    "مثال:\n",
+    "- إذا كان المحتوى قد تم تحديثه في الساعات الأخيرة، فإنه يعتبر أكثر أهمية ويتم إعطاؤه أولوية في اتخاذ القرارات. \n",
+    "- **قاعدة تحديث المحتوى** ستأخذ الأولوية إذا كانت القاعدة الأخرى تشير إلى محتوى قديم.\n",
+    "\n",
+    "#### **الخصوصية (Specificity):**\n",
+    "الخصوصية هي طريقة لحل التعارض حيث يتم تحديد القاعدة الأكثر تحديدًا وتعقيدًا كأفضل طريقة لحل التعارضات. كلما كانت القاعدة أكثر تحديدًا في شروطها، كلما كانت أكثر دقة في اتخاذ القرارات.\n",
+    "\n",
+    "مثال:\n",
+    "- إذا كانت هناك قاعدة تنص على أن المحتوى \"من النوع الوطني\"، وأخرى تتعامل مع المحتوى \"المثير للجدل\"، فإن قاعدة **المحتوى المثير للجدل** ستكون أكثر خصوصية ووضوحًا في حال تعارضت مع القاعدة العامة.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. **Include an explanation of why your chosen method is appropriate:**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "#### **الأولوية:**\n",
+    "الأولوية هي الطريقة الأنسب في هذا السياق لأن بعض القرارات تتطلب اتخاذ إجراءات فورية أو قد يكون لها تأثير أكبر على المستخدمين. على سبيل المثال، إذا كان المحتوى يحتوي على خطاب كراهية، يجب أن يتم رفضه فورًا بغض النظر عن القواعد الأخرى المتعلقة بالتفاعل أو الحداثة. أولوية قواعد **المحتوى غير الأخلاقي** (مثل خطاب الكراهية) تضمن الحفاظ على المعايير الأخلاقية والحد من التأثيرات السلبية.\n",
+    "\n",
+    "#### **التكرار:**\n",
+    "التكرار مهم لأنه يعكس **أحدث المعلومات** في النظام. في كثير من الأحيان، يكون المحتوى الذي تم تحديثه مؤخرًا هو الأكثر أهمية ويجب نشره أو معالجته على الفور. إذا كان المحتوى قد تم تحديثه مؤخرًا، فمن المنطقي إعطاؤه الأولوية لأنه يعكس الأحداث الحالية أو المعلومات المتجددة التي قد تكون أكثر فائدة أو ضررًا.\n",
+    "\n",
+    "#### **الخصوصية:**\n",
+    "الخصوصية هي الأنسب عندما يكون لدينا قواعد متعددة، وبعضها يكون أكثر تحديدًا من غيرها. استخدام قواعد أكثر تحديدًا يسمح بتقليل التعميم واتخاذ قرارات أكثر دقة. على سبيل المثال، **المحتوى المثير للجدل** أو **المحتوى غير الأخلاقي** يجب أن يأخذ الأولوية لأنه يتعامل مع حالات دقيقة قد تؤدي إلى أضرار كبيرة إذا لم تتم معالجتها على الفور.\n",
+    "\n",
+    "### **مثال تطبيقي:**\n",
+    "إذا كان لدينا تعارض بين قاعدة تشير إلى **محتوى مثير للجدل** (مثل خطاب الكراهية) وقاعدة أخرى تشير إلى **محتوى وطني**، فإننا سوف نمنح الأولوية للقواعد التي تتعلق **بالمحتوى غير الأخلاقي** بسبب أهميته العالية في الحفاظ على البيئة الأخلاقية.\n",
+    "\n",
+    "### **السبب في اختيار الطرق:**\n",
+    "- **الأولوية** تعطي النظام القدرة على اتخاذ قرارات حاسمة في الوقت المناسب مع الأخذ في الاعتبار الأمور الأكثر أهمية.\n",
+    "- **التكرار** يضمن أن النظام يتعامل مع المحتوى الأحدث بشكل أسرع، مما يضمن معالجة المعلومات الأكثر حداثة.\n",
+    "- **الخصوصية** تساهم في زيادة دقة النظام عند التعرف على أنواع المحتوى المختلفة بشكل منفصل، مما يقلل من الأخطاء ويساعد في تحسين القرارات.\n",
+    "\n",
+    "بذلك، هذه الطرق الثلاث هي الأكثر ملائمة لأن النظام يتعامل مع سيناريوهات معقدة حيث تتداخل القواعد والحقائق، وهذه الطرق تمنح النظام القدرة على اتخاذ قرارات واضحة وسريعة بناءً على المعطيات المختلفة."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### ترقية الآلية بالاعتماد على الكود المرفق\n"
    ]
   },
